# chirpdetector

./: .gitignore  .pre-commit-config.yaml  2  404.html  <F2>  Makefile  README.md  \  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml
api/: index.html
api/assign_chirps/: index.html
api/convert_data/: index.html
api/dataset_utils/: index.html
api/detect_chirps/: index.html
api/plot_detections/: index.html
api/train_model/: index.html
assingment/: index.html
chirpdetector/: \  __init__.py  assign_chirps.py  assing_chirps.py  benchmark.py  chirpdetector.py  chirpdetector_old.py  config.toml  convert_data.py  dataconverter.py  dataset_parser.py  dataset_utils.py  datasets.py  detect_chirps.py  detect_chirps2.py  eval_assignment.py  eval_detection.py  plot_dataset.py  plot_detections.py  plot_logo.py  train_model.py
chirpdetector/.trash/: convert_data_old.py  detect_chirps.py
chirpdetector/config/: __init__.py  config.toml  configfiles.py
chirpdetector/conversion/: __init__.py  convert_data.py  convert_data_old.py  detection_dataset.py
chirpdetector/datahandling/: __init__.py  bbox_tools.py  convert_to_training_data.py  dataset_parsing.py  output_data_model.py  signal_processing.py
chirpdetector/detection/: __init__.py  assignment_models.py  detect_chirps.py  detection_models.py  visualization_functions.py
chirpdetector/evaluation/: __init__.py  eval_detection.py
chirpdetector/logging/: __init__.py  logging.py
chirpdetector/models/: __init__.py  datasets.py  helpers.py  model.py  utils.py
chirpdetector/models/faster_rcnn_detector/: __init__.py  loaders.py  train.py  val.py
chirpdetector/models/mlp_assigner/: __init__.py  loaders.py
chirpdetector/models/yolov8_detector/: loaders.py
chirpdetector/models/yolov9_detector/: __init__.py  loaders.py
chirpdetector/utils/: __init__.py  configfiles.py  filters.py  logging.py  plotstyle.py  signal_processing.py
chirpdetector/visualization/: __init__.py  plot_detections.py  plot_setup.py
cli_reference/: index.html
contributing/: index.html
data_structure/: index.html
dataset/: index.html
demo/: index.html
detection/: index.html
docs/: CNAME  assingment.md  cli_reference.md  contributing.md  data_structure.md  demo.md  detection.md  example1.md  how_it_works.md  index.md  installation.md  training.md
docs/api/: assign_chirps.md  config.md  convert_data.md  dataset_utils.md  detect_chirps.md  plot_detections.md  train_model.md
example1/: index.html
how_it_works/: index.html
installation/: index.html
labeling/: index.html
search/: search_index.json
setup/: index.html
tests/: test_configfiles.py  test_convert_data.py  test_detect_chirps.py  test_utils.py
training/: index.html
visualization/: index.html
yolo-helpers/: index.html
