[tool.poetry]
name = "chirpdetector"
version = "0.0.1"
description = "Detect brief communication signals of weakly electric fish in the frequency domain"
authors = ["Patrick Weygoldt <patrick@weygoldt.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"
rich = "^13.6.0"
scikit-learn = "^1.3.2"
toml = "^0.10.2"
pandas = "^2.1.2"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
datasets = "chirpdetector.models.datasets:main"
train = "chirpdetector.train_model:train_cli"
chirpdetector = "chirpdetector.chirpdetector:chirpdetector_cli"
inference = "chirpdetector.train_model:inference_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
